--- a/style_19th.css
+++ b/style_19th.css
@@ -1,6 +1,6 @@
 *
 body{
-	background-image: url("file:///C:/Users/user/OneDrive/Desktop/t_emblemy1.github.io/kb0Zm.jpg");
+	background-image: url("file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/kb0Zm.jpg");
 }
 .header {
   overflow: hidden;
